--- a/teste/teste.html
+++ b/teste/teste.html
@@ -1,32 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login web</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cl-icon/css/all.min.css">
-</head>
-<body>
-    <div class="wrapper">
-        <form action="" class="form">
-            <h1 class="title">Inicio</h1>
-            <div class="inp">
-                <input type="text" name="" id="" class="input" placeholder="usuario">
-                <i class="fa-solid fa-user"></i>
-            </div>
-            <div class="inp">
-                <input type="password" name="" id="" class="input" placeholder="senha">
-                <i class="fa-solid fa-lock"></i>
-            </div>
-            <button class="submit">Iniciar sessão</button>
-            <p class="footer">Não tem conta?  <a href="#" class="link">Por favor, crie uma</a></p>   
-        </form>
-        <div></div>
-        <div class="banner">
-            <h1 class="wel_text">Bem vindo(a)!</h1><br>
-            <p class="para"></p>
-        </div>
-    </div>
-</body>
+    <head>
+        <title>Text Animation</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+      <h1> 
+  <span style="--i: 1">N</span> 
+  <span style="--i: 2">E</span> 
+  <span style="--i: 3">T</span> 
+  <span style="--i: 4">O</span> 
+
+ 
+      
+  </h1> 
+    </body>
 </html>
+
